--- a/index.html
+++ b/index.html
@@ -9,11 +9,8 @@
     <link rel="stylesheet" href="styles/styles.css">
     <script src="https://kit.fontawesome.com/ef83dc3811.js" crossorigin="anonymous"></script>
     <!--  <script src="script.js"></script>  -->
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="Alexis Aujard">
 
 </head>
 
@@ -23,10 +20,10 @@
         <nav id="nav-bar" class="col-10">
 
             <ul>
-                <li><button type="button" class="btn btn-primary btn-lg">Lorem ipsum dolor sit</button></li>
-                <li><button type="button" class="btn btn-primary btn-lg">Lorem ipsum dolor sit</button></li>
-                <li><button type="button" class="btn btn-primary btn-lg">Lorem ipsum dolor sit</button></li>
-                <li><button type="button" class="btn btn-primary btn-lg">Lorem ipsum dolor sit</button></li>
+                <li><button type="button" class="btn btn-primary btn-lg">Lorem ipsum dolor</button></li>
+                <li><button type="button" class="btn btn-primary btn-lg">Lorem ipsum dolor</button></li>
+                <li><button type="button" class="btn btn-primary btn-lg">Lorem ipsum dolor</button></li>
+                <li><button type="button" class="btn btn-primary btn-lg">Lorem ipsum dolor</button></li>
             </ul>
         </nav>
 
@@ -38,37 +35,35 @@
     <br>
     <br>
     <p>coucou</p>
-    <p>je</p>
-    <p>sais</p>
-    <p>pas</p>
-    <p>si</p>
-    <p>on</p>
-    <p>bosse</p>
-    <p>vraiment</p>
     <p>coucou</p>
-    <p>je</p>
-    <p>sais</p>
-    <p>pas</p>
-    <p>si</p>
-    <p>on</p>
-    <p>bosse</p>
-    <p>vraiment</p>
     <p>coucou</p>
-    <p>je</p>
-    <p>sais</p>
-    <p>pas</p>
-    <p>si</p>
-    <p>on</p>
-    <p>bosse</p>
-    <p>vraiment</p>
     <p>coucou</p>
-    <p>je</p>
-    <p>sais</p>
-    <p>pas</p>
-    <p>si</p>
-    <p>on</p>
-    <p>bosse</p>
-    <p>vraiment</p>
+    <p>coucou</p>
+    <p>coucou</p>
+    <p>coucou</p>
+    <p>coucou</p>
+    <p>coucou</p>
+    <p>coucou</p>
+    <p>coucou</p>
+    <p>coucou</p>
+    <p>coucou</p>
+    <p>coucou</p>
+    <p>coucou</p>
+    <p>coucou</p>
+    <p>coucou</p>
+    <p>coucou</p>
+    <p>coucou</p>
+    <p>coucou</p>
+    <p>coucou</p>
+    <p>coucou</p>
+    <p>coucou</p>
+    <p>coucou</p>
+    <p>coucou</p>
+    <p>coucou</p>
+    <p>coucou</p>
+    <p>coucou</p>
+    <p>coucou</p>
+    
 
     <footer class="footer-dark">
 
