--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav id="nav-bar" class="col-10">
 
             <ul>
-                <li><button type="button" class="btn btn-primary btn-lg">Blog</button></li>
+                <li><button type="button" class="btn btn-primary btn-lg">Lorem ipsum dolor</button></li>
                 <li><button type="button" class="btn btn-primary btn-lg">Lorem ipsum dolor</button></li>
                 <li><button type="button" class="btn btn-primary btn-lg">Lorem ipsum dolor</button></li>
                 <li><button type="button" class="btn btn-primary btn-lg">Lorem ipsum dolor</button></li>
