--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
     <link rel="stylesheet" href="styles/bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
 
     <script src="https://kit.fontawesome.com/ef83dc3811.js" crossorigin="anonymous"></script>
     <meta charset="utf-8">
