--- a/index.html
+++ b/index.html
@@ -16,20 +16,21 @@
 
 <body>
     <header class="row" id="header">
-        <a class="col-2"><img id="logo" src="assets/img/logo-full.png"></a>
+        <a class="col-2" href="https://bluefalcon64.github.io/website-digital-consultant/"><img id="logo" src="assets/img/logo.png"></a>
         <nav id="nav-bar" class="col-10">
 
             <ul>
-                <li><a style="color: white; text-decoration: none;" href="">Accueil</a></li>
-                <li><a style="color: white; text-decoration: none;" href="">À propos</a></li>
-                <li><a style="color: white; text-decoration: none;" href="">Services</a></li>
-                <li><a style="color: white; text-decoration: none;" href="">Galerie</a></li>
-                <li><a style="color: white; text-decoration: none;" href="">Blog</a></li>
-                <li><a style="color: white; text-decoration: none;" href="">Contact</a></li>
+                <li><a style="color: #ebfaec; text-decoration: none;" href="">Accueil</a></li>
+                <li><a style="color: #ebfaec; text-decoration: none;" href="">À propos</a></li>
+                <li><a style="color: #ebfaec; text-decoration: none;" href="">Services</a></li>
+                <li><a style="color: #ebfaec; text-decoration: none;" href="">Galerie</a></li>
+                <li><a style="color: #ebfaec; text-decoration: none;" href="">Blog</a></li>
+                <li><a style="color: #ebfaec; text-decoration: none;" href="">Contact</a></li>
             </ul>
         </nav>
     </header>
 
+<div class="only-center">
     <main>
         <div>
             <br>
@@ -38,11 +39,10 @@
             <br>
             <br>
             <br>
-            <br>
-            <br>
-            <br>
-            <h1 id="Accueil">Digital Consultant</h1>
-            <h3 id="soustitre">Audit / Training / Advice</h3>
+            <div class="box">
+                <h1>Digital Consultant</h1>
+                <h5>Audit / Training / Advice</h5>
+            </div>
         </div>
         <div>
             <a class="buttons" id="button1" href=""></a>
@@ -52,9 +52,9 @@
     </main>
     <section id="">
         <div>
-            <h3>Pourquoi choisir nous?</h3>
+            <h3>Pourquoi nous choisir ?</h3>
             <div>
-                <p>DigitalConsultant (DC) est une entreprise pluridisciplinaire spécialisée dans la transition numérique des petites et moyennes entreprises. Nous sommes  composés  de  professionnels  indépendants  expérimentés  qui collaborent régulièrement ensemble.    
+                <p>Digital Consultant (DC) est une entreprise pluridisciplinaire spécialisée dans la transition numérique des petites et moyennes entreprises. Nous sommes  composés  de  professionnels  indépendants  expérimentés  qui collaborent régulièrement ensemble.    
                 </p>
                 <br>
                 <p>Notre connaissance approfondie du marché et la sélection minutieuse
@@ -99,7 +99,6 @@
                 </marquee></div>
           </marquee>
 
-        </div>
     </section>
     <section>
         <h3 id="galeries">Notre galerie</h3>
@@ -170,15 +169,15 @@
             </button>
         </li>
     </ul>
-</section>
-<section>
-    <h3 id="Blog">Blog</h3>
-    <div id="comments-list">
+    </section>
+    <section>
+        <h3 id="Blog">Blog</h3>
+        <div id="comments-list">
     
     </div>
 
 
-<form action="#" method="post" onSubmit="return false;" id="new-comment">
+    <form action="#" method="post" onSubmit="return false;" id="new-comment">
     <div class="mb-3 d-flex align-items-center">
         <label for="nom" class="form-label me-2">Nom</label>
         <input type="text" class="form-control" id="nom" name="nom">
@@ -189,8 +188,9 @@
     <div class="mb-3">
         <input type="submit" class="btn btn-primary" value="Envoyer" onclick="onReceived()" >
     </div>
-</form>
-</section>  
+    </form>
+    </section> 
+</div>   
 
     <footer class="footer-dark">
 
