--- a/index.html
+++ b/index.html
@@ -103,19 +103,19 @@
         <h3>Nos partenaires</h3><div class="bandeau">
         <marquee width="100%" scrollamount="20" scrolldelay="1">
    <!-- L'objet parcourt 2px chaque 10ms -->
-                <img alt="description de l'image" src="images/image1.jpg">
-                <img alt="description de l'image" src="images/image2.jpg">
-                <img alt="description de l'image" src="images/image3.jpg">
-                <img alt="description de l'image" src="images/image4.jpg">
-                <img alt="description de l'image" src="images/image5.jpg">
-                <img alt="description de l'image" src="images/image6.jpg">
-                <img alt="description de l'image" src="images/image7.jpg">
-                <img alt="description de l'image" src="images/image8.jpg">
-                <img alt="description de l'image" src="images/image9.jpg">
-                <img alt="description de l'image" src="images/image10.jpg">
-                <img alt="description de l'image" src="images/image11.jpg">
-                <img alt="description de l'image" src="images/image12.jpg">
-                <img alt="description de l'image" src="images/image13.jpg">
+                <img alt="description de l'image" class="foto" src="images/image1.jpg">
+                <img alt="description de l'image" class="foto" src="images/image2.jpg">
+                <img alt="description de l'image" class="foto" src="images/image3.jpg">
+                <img alt="description de l'image" class="foto" src="images/image4.jpg">
+                <img alt="description de l'image" class="foto" src="images/image5.jpg">
+                <img alt="description de l'image" class="foto" src="images/image6.jpg">
+                <img alt="description de l'image" class="foto" src="images/image7.jpg">
+                <img alt="description de l'image" class="foto" src="images/image8.jpg">
+                <img alt="description de l'image" class="foto" src="images/image9.jpg">
+                <img alt="description de l'image" class="foto" src="images/image10.jpg">
+                <img alt="description de l'image" class="foto" src="images/image11.jpg">
+                <img alt="description de l'image" class="foto" src="images/image12.jpg">
+                <img alt="description de l'image" class="foto" src="images/image13.jpg">
                 </marquee></div>
           </marquee>
 
@@ -124,24 +124,24 @@
         <h3 id="galeries">Notre galerie</h3>
         <section>
     <div class="ball">
-        <a href=""> <img alt="description de l'image" src="images/image14.jpg"> </a>
-        <a href=""> <img alt="description de l'image" src="images/image15.jpg"> </a> 
-        <a href=""> <img alt="description de l'image" src="images/image16.jpg"> </a>
-        <a href=""> <img alt="description de l'image" src="images/image17.jpg"> </a>  
+        <a href=""> <img alt="description de l'image" class="foto" src="images/image14.jpg"> </a>
+        <a href=""> <img alt="description de l'image" class="foto" src="images/image15.jpg"> </a> 
+        <a href=""> <img alt="description de l'image" class="foto" src="images/image16.jpg"> </a>
+        <a href=""> <img alt="description de l'image" class="foto" src="images/image17.jpg"> </a>  
     </div>
   
     <div class="ball">
-        <a href=""> <img alt="description de l'image" src="images/image18.jpg"> </a>
-        <a href=""> <img alt="description de l'image" src="images/image19.jpg"> </a> 
-        <a href=""> <img alt="description de l'image" src="images/image20.jpg"> </a> 
-        <a href=""> <img alt="description de l'image" src="images/image21.jpg"> </a> 
+        <a href=""> <img alt="description de l'image" class="foto" src="images/image18.jpg"> </a>
+        <a href=""> <img alt="description de l'image" class="foto" src="images/image19.jpg"> </a> 
+        <a href=""> <img alt="description de l'image" class="foto" src="images/image20.jpg"> </a> 
+        <a href=""> <img alt="description de l'image" class="foto" src="images/image21.jpg"> </a> 
     </div>
   
     <div class="ball">
-        <a href=""> <img alt="description de l'image" src="images/image22.jpg"> </a>
-        <a href=""> <img alt="description de l'image" src="images/image23.jpg"> </a> 
-        <a href=""> <img alt="description de l'image" src="images/image24.jpg"> </a> 
-        <a href=""> <img alt="description de l'image" src="images/image25.jpg"> </a>   
+        <a href=""> <img alt="description de l'image" class="foto" src="images/image22.jpg"> </a>
+        <a href=""> <img alt="description de l'image" class="foto" src="images/image23.jpg"> </a> 
+        <a href=""> <img alt="description de l'image" class="foto" src="images/image24.jpg"> </a> 
+        <a href=""> <img alt="description de l'image" class="foto" src="images/image25.jpg"> </a>   
     </div>
     </section>
     </section>
