--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="https://kit.fontawesome.com/ef83dc3811.js" crossorigin="anonymous"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="> Digital Consultant (DC) est une entreprise pluridisciplinaire spécialisée dans la transition numérique des petites et moyennes entreprises. Nous sommes  composés  de  professionnels  indépendants  expérimentés  qui collaborent régulièrement ensemble.">
 </head>
 
 <body>
