--- a/index.html
+++ b/index.html
@@ -42,21 +42,20 @@
                 <br>
                 <br>
                 <div class="box">
-                    <h1>Digital Consultant</h1>
-                    <h5>Audit / Training / Advice</h5>
+                    <h1 id="Titre">Digital Consultant</h1>
+                    <h5 id="soustitre">Audit / Training / Advice</h5>
                 </div>
             </div>
             <div>
-                <a class="buttons" id="button1" href=""></a>
-                <a class="buttons" id="button2" href=""></a>
+
             </div>
             <hr class="">
         </main>
 
-        <section id="">
+        <section id="Apropos">
             <div>
-                <h3>Pourquoi nous choisir ?</h3>
-                <div>
+                <h3 id="">Pourquoi nous choisir ?</h3>
+                <div id="text1">
                     <p>Digital Consultant (DC) est une entreprise pluridisciplinaire spécialisée dans la transition numérique des petites et moyennes entreprises. Nous sommes  composés  de  professionnels  indépendants  expérimentés  qui collaborent régulièrement ensemble.    
                     </p>
                     <br>
@@ -70,11 +69,11 @@
             </div>   
         </section>
 
-        <section>
+        <section id="offre">
             <h3 id="Services">Nos offres</h3>
             <div id="SousService">
-                <p>Voici nos trois offres principal</p>
-                <div class="col-12 ">
+
+                <div id="3offre" class="col-12 ">
                     <div class="row justify-content-evenly">
                         <div class="col-12 col-sm-5 col-lg-3  shadow p-3 mb-5 mt-3 bg-body rounded ">
                             <div class="row justify-content-center ">
