--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
     <header class="row" id="header">
-        <a class="col-2" href="https://bluefalcon64.github.io/website-digital-consultant/"><img id="logo" src="assets/img/logo.png"></a>
+        <a class="col-2" href="https://bluefalcon64.github.io/website-digital-consultant/"><img id="logo" src="assets/img/logo.png" alt="Logo"></a>
         <nav id="nav-bar" class="col-10">
             <ul>
                 <li><a style="color: white; text-decoration: none;" href="#">Accueil</a></li>
@@ -34,22 +34,10 @@
     <div class="only-center">
 
         <main>
-            <div>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
                 <div class="box">
                     <h1 id="Titre">Digital Consultant</h1>
                     <h5 id="soustitre">Audit / Training / Advice</h5>
                 </div>
-            </div>
-            <div>
-
-            </div>
-            <hr class="">
         </main>
 
         <section id="Apropos">
@@ -94,7 +82,6 @@
         <section id="partenaire">
             <h3>Nos partenaires</h3><div class="bandeau">
             <marquee width="100%" scrollamount="20" scrolldelay="1">
-                <!-- L'objet parcourt 2px chaque 10ms -->
                 <img alt="description de l'image" src="https://via.placeholder.com/200x150">
                 <img alt="description de l'image" src="https://via.placeholder.com/200x150">
                 <img alt="description de l'image" src="https://via.placeholder.com/200x150">
@@ -204,8 +191,8 @@
     <footer class="footer-dark">
 
         <ul>
-            <li>bla bla bla</li>
-            <li>autre Bla Bla Bla</li>
+            <a style="color: #ebfaec; text-decoration: none;" href=""><li>Conditions d'utilisation</li></a>
+            <a style="color: #ebfaec; text-decoration: none;" href=""><li>Mentions Légales</li></a>
         </ul>
 
         <div class="item social">
@@ -215,7 +202,7 @@
             <a href="#"><i class="fab fa-linkedin-in"></i></a>
         </div>
 
-        <p class="copyright"> © 2022</p>
+        <p class="copyright">Digital Consultant © 2022</p>
 
     </footer>
 
