--- a/index.html
+++ b/index.html
@@ -105,12 +105,10 @@
                     <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>
                     <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
                     <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>
-                    <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>  
                 </div>
       
                 <div>
                     <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>
-                    <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
                     <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
                     <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
                 </div>
@@ -118,8 +116,13 @@
                 <div>
                     <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>
                     <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
-                    <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
                     <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>   
+                </div>
+                
+                <div>
+                    <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>
+                    <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
+                    <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
                 </div>
             </section>
         </section>
