--- a/index.html
+++ b/index.html
@@ -100,22 +100,22 @@
 
         <section>
             <h3 id="galeries">Notre galerie</h3>
-            <section>
-                <div>
+            <section class="row justify-content-evenly">
+                <div class="col-12 col-sm-5 col-lg-3">
                     <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>
                     <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
                     <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>
                     <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>
                 </div>
       
-                <div>
+                <div class="col-12 col-sm-5 col-lg-3">
                     <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>
                     <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
                     <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>
                     <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>
                 </div>
               
-                <div>
+                <div class="col-12 col-sm-5 col-lg-3">
                     <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>
                     <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
                     <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>
