--- a/index.html
+++ b/index.html
@@ -32,14 +32,13 @@
     </header>
 
     <div class="only-center">
-
         <main>
                 <div class="box">
-                    <h1 id="Titre">Digital Consultant</h1>
-                    <h5 id="soustitre">Audit / Training / Advice</h5>
+                    <h1 class="box1" id="Titre">Digital Consultant</h1>
+                    <h5 id="soustitre">Audit &nbsp&nbsp&nbsp/&nbsp&nbsp&nbsp Training &nbsp&nbsp&nbsp/&nbsp&nbsp&nbsp Advice</h5>
                 </div>
         </main>
-
+        <hr style="border-color: #ebfaec;">
         <section id="Apropos">
             <div>
                 <h3 id="">Pourquoi nous choisir ?</h3>
