--- a/index.html
+++ b/index.html
@@ -40,20 +40,39 @@
         </main>
         <hr style="border-color: #ebfaec;">
         <section id="Apropos">
-            <div>
-                <h3 id="">Pourquoi nous choisir ?</h3>
-                <div id="text1">
-                    <p>Digital Consultant (DC) est une entreprise pluridisciplinaire spécialisée dans la transition numérique des petites et moyennes entreprises. Nous sommes  composés  de  professionnels  indépendants  expérimentés  qui collaborent régulièrement ensemble.    
-                    </p>
-                    <br>
-                    <p>Notre connaissance approfondie du marché et la sélection minutieuse
-                      de nos collaborateurs nous permettent de proposer des services de
-                      qualité et de nous engager auprès de nos clients à des tarifs très
-                      compétitifs.</p>
-                    <br>
-                    <p>Notre  expérience  et  notre  savoir-faire  nous  permettentde  maitriser l'ensemble des coûts reliésaux évolutions et de contrôler les risques et ainsi de proposer un produit final évolutif, modulable et indépendant.L'ensemble de nos offres sont personnalisables et nos conseillers, vous accompagnentavant   et   après   la   concrétisation   de   vos   projets.</p>
-                </div>  
-            </div>   
+          <h3 id="">Pourquoi nous choisir ?</h3>
+          <div id="3offre" class="col-12 ">
+              <div class="row justify-content-evenly">
+
+                  <div class="col-12 col-sm-6 col-lg-4 bg-body rounded">
+                      <div class="row justify-content-evenly">
+                          <div class="col-10 shadow p-3 mb-5 mt-3 bg-body rounded ball">
+                              <h4>Professionnalisme</h4> <p>Digital Consultant (DC) est une entreprise pluridisciplinaire spécialisée dans la transition numérique des petites et moyennes entreprises. Nous sommes  composés  de  professionnels  indépendants  expérimentés  qui collaborent régulièrement ensemble.</p>
+                          </div>
+                      </div>
+                  </div>
+
+                  <div class="col-12 col-sm-6 col-lg-4 bg-body rounded">
+                      <div class="row justify-content-evenly">
+                          <div class="col-10 shadow p-3 mb-5 mt-3 bg-body rounded ball">
+                              <h4>Connaissances</h4> <p>Notre connaissance approfondie du marché et la sélection minutieuse
+                                de nos collaborateurs nous permettent de proposer des services de
+                                qualité et de nous engager auprès de nos clients à des tarifs très
+                                compétitifs.</p>
+                          </div> 
+                      </div>
+                  </div>
+
+                  <div class="col-12 col-sm-12 col-lg-4 bg-body rounded">
+                      <div class="row justify-content-evenly">
+                          <div class="col-10 col-sm-12 shadow p-3 mb-5 mt-3 bg-body rounded ball">
+                              <h4>Expérience</h4><p>Notre  expérience  et  notre  savoir-faire  nous  permettentde  maitriser l'ensemble des coûts reliésaux évolutions et de contrôler les risques et ainsi de proposer un produit final évolutif, modulable et indépendant.L'ensemble de nos offres sont personnalisables et nos conseillers, vous accompagnentavant   et   après   la   concrétisation   de   vos   projets.</p>
+                          </div>
+                      </div>
+                    </div>
+
+              </div>
+          </div>    
         </section>
 
         <section id="offre">
@@ -91,7 +110,7 @@
 
         <section id="partenaire">
             <h3>Nos partenaires</h3><div class="bandeau">
-            <marquee width="100%" scrollamount="20" scrolldelay="1">
+            <marquee width="100%" scrollamount="10" scrolldelay="1">
                 <img alt="description de l'image" src="https://via.placeholder.com/200x150">
                 <img alt="description de l'image" src="https://via.placeholder.com/200x150">
                 <img alt="description de l'image" src="https://via.placeholder.com/200x150">
