--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
             </section>
         </section>
 
-        <section id="contacte">
+        <section id="contact">
             <h1>Nous Contacter</h1>
-            <ul>
+            <ul style="text-decoration : none;">
                 <li>
                     Votre Nom
                     <div>
