--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                   <div class="col-12 col-sm-6 col-lg-4 bg-body rounded">
                       <div class="row justify-content-evenly">
                           <div class="col-10 shadow p-3 mb-5 mt-3 bg-body rounded ball">
-                              <h4>Professionnalisme</h4> <p>Digital Consultant (DC) est une entreprise pluridisciplinaire spécialisée dans la transition numérique des petites et moyennes entreprises. Nous sommes  composés  de  professionnels  indépendants  expérimentés  qui collaborent régulièrement ensemble.</p>
+                              <h4 style="font-weight: bold;">Professionnalisme</h4> <p>Digital Consultant (DC) est une entreprise pluridisciplinaire spécialisée dans la transition numérique des petites et moyennes entreprises. Nous sommes  composés  de  professionnels  indépendants  expérimentés  qui collaborent régulièrement ensemble.</p>
                           </div>
                       </div>
                   </div>
@@ -55,7 +55,7 @@
                   <div class="col-12 col-sm-6 col-lg-4 bg-body rounded">
                       <div class="row justify-content-evenly">
                           <div class="col-10 shadow p-3 mb-5 mt-3 bg-body rounded ball">
-                              <h4>Connaissances</h4> <p>Notre connaissance approfondie du marché et la sélection minutieuse
+                              <h4 style="font-weight: bold;">Connaissances</h4> <p>Notre connaissance approfondie du marché et la sélection minutieuse
                                 de nos collaborateurs nous permettent de proposer des services de
                                 qualité et de nous engager auprès de nos clients à des tarifs très
                                 compétitifs.</p>
@@ -66,7 +66,7 @@
                   <div class="col-12 col-sm-12 col-lg-4 bg-body rounded">
                       <div class="row justify-content-evenly">
                           <div class="col-10 col-sm-12 shadow p-3 mb-5 mt-3 bg-body rounded ball">
-                              <h4>Expérience</h4><p>Notre  expérience  et  notre  savoir-faire  nous  permettentde  maitriser l'ensemble des coûts reliésaux évolutions et de contrôler les risques et ainsi de proposer un produit final évolutif, modulable et indépendant.L'ensemble de nos offres sont personnalisables et nos conseillers, vous accompagnentavant   et   après   la   concrétisation   de   vos   projets.</p>
+                              <h4 style="font-weight: bold;">Expérience</h4><p>Notre  expérience  et  notre  savoir-faire  nous  permettentde  maitriser l'ensemble des coûts reliésaux évolutions et de contrôler les risques et ainsi de proposer un produit final évolutif, modulable et indépendant.L'ensemble de nos offres sont personnalisables et nos conseillers, vous accompagnentavant   et   après   la   concrétisation   de   vos   projets.</p>
                           </div>
                       </div>
                     </div>
@@ -83,7 +83,7 @@
                     <div class="col-12 col-sm-6 col-lg-4 bg-body rounded">
                         <div class="row justify-content-evenly">
                             <div class="col-10 shadow p-3 mb-5 mt-3 bg-body rounded ball">
-                                <h4>Phase d'audit</h4> <p>Ici nous récoltons un maximum d'informations sur votre entreprise, nous prenons le temps avec vous d'identifier vos difficultés et vos facilités ainsi que les réalités de gestion courante auxquelles vous êtes confrontées. Ceci afin de vous orienter vers la solution dont vous avez réellement besoin.</p>  
+                                <h4 style="font-weight: bold;">Phase d'audit</h4> <p>Ici nous récoltons un maximum d'informations sur votre entreprise, nous prenons le temps avec vous d'identifier vos difficultés et vos facilités ainsi que les réalités de gestion courante auxquelles vous êtes confrontées. Ceci afin de vous orienter vers la solution dont vous avez réellement besoin.</p>  
                             </div>
                         </div>
                     </div>
@@ -91,7 +91,7 @@
                     <div class="col-12 col-sm-6 col-lg-4 bg-body rounded">
                         <div class="row justify-content-evenly">
                             <div class="col-10 shadow p-3 mb-5 mt-3 bg-body rounded ball">
-                                <h4>Phase de conseil</h4> <p>À la suite de la phase d'audit seront identifiées les priorités en matière de conseil et de conception. À cette étape un premier bilan est effectué dans lequel nous présentons les résultats de l'audit et émettons des conseils pour la phase de conception.</p>
+                                <h4 style="font-weight: bold;">Phase de conseil</h4> <p>À la suite de la phase d'audit seront identifiées les priorités en matière de conseil et de conception. À cette étape un premier bilan est effectué dans lequel nous présentons les résultats de l'audit et émettons des conseils pour la phase de conception.</p>
                             </div> 
                         </div>
                     </div>
@@ -99,7 +99,7 @@
                     <div class="col-12 col-sm-12 col-lg-4 bg-body rounded">
                         <div class="row justify-content-evenly">
                             <div class="col-10 col-sm-12 shadow p-3 mb-5 mt-3 bg-body rounded ball">
-                                <h4>Phase de conception</h4><p>La phase de conception peut soit être assurée par nos équipes soit être déléguée à un de nos nombreux partenaires au Canada en Espagne et en France et prochainement aux États-Unis. Nous proposons des solutions adaptées à tous types de clientèle et tous budgets confondus.</p>
+                                <h4 style="font-weight: bold;">Phase de conception</h4><p>La phase de conception peut soit être assurée par nos équipes soit être déléguée à un de nos nombreux partenaires au Canada en Espagne et en France et prochainement aux États-Unis. Nous proposons des solutions adaptées à tous types de clientèle et tous budgets confondus.</p>
                             </div>
                         </div>
                       </div>
@@ -153,9 +153,9 @@
             </section>
         </section>
 
-        <section id="contact">
+        <section id="contacte">
             <h1>Nous Contacter</h1>
-            <ul style="text-decoration : none;">
+            <ul>
                 <li>
                     Votre Nom
                     <div>
