--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
         <ul>
             <a style="color: #ebfaec; text-decoration: none;" href=""><li>Conditions d'utilisation</li></a>
-            <a style="color: #ebfaec; text-decoration: none;" href=""><li>Mentions Légales</li></a>
+            <a style="color: #ebfaec; text-decoration: none;" href="RGPD.html"><li>Mentions Légales</li></a>
         </ul>
 
         <div class="item social">
